--- a/index.html
+++ b/index.html
@@ -4,8 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up Form</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="container">
+        <div class="img-container">
+            <img src="./assets/img1.jpg" alt="Sign Up Image">
+            <div class="logo-container">
+                <img src="./assets/odin-lined.png" alt="Logo">
+                <p class="logo-text">ODIN</p>
+            </div>
+            <div class="img-credits">
+                <p>Photo by <a href="https://unsplash.com/@wolfgang_hasselmann" target="_blank">Wolfgang Hasselmann</a> on <a href="https://unsplash.com/photos/pink-trees-and-blue-path-under-bright-blue-sky-IFGlAd7AXgs" target="_blank">Unsplash</a></p>
+            </div>
+        </div>
+        <div class="form-container">
+            
+        </div>
+    </div>
     
 </body>
 </html>
