--- a/index.html
+++ b/index.html
@@ -20,7 +20,43 @@
             </div>
         </div>
         <div class="form-container">
-            
+            <div class="header-text">
+                <h1>Sign Up</h1>
+                <p>Note: this is not a real service.</p>
+            </div>
+            <div class="form">
+                <form action="#" method="post">
+                    <div class="input-group">
+                        <label for="firstname">First Name</label>
+                        <input type="text" id="firstname" name="firstname" required>
+                    </div>
+                    <div class="input-group">
+                        <label for="lastname">Last Name</label>
+                        <input type="text" id="lastname" name="lastname" required>
+                    </div>
+                    <div class="input-group">
+                        <label for="email">Email</label>
+                        <input type="email" id="email" name="email" required>
+                    </div>
+                    <div class="input-group">
+                        <label for="phoneNumber">Phone Number</label>
+                        <input type="text" id="phoneNumber" name="phoneNumber" required>
+                    </div>
+                    <div class="input-group">
+                        <label for="password">Password</label>
+                        <input type="password" id="password" name="password" required>
+                    </div>
+                    <div class="input-group">
+                        <label for="confirm-password">Confirm Password</label>
+                        <input type="password" id="confirm-password" name="confirm-password" required>
+                    </div>
+                    <div class="submit">
+                        <button type="submit">Create Account</button>
+                    </div>
+                    <div class="login-link">
+                        <p>Already have an account? <a href="#">Log In</a></p>
+                </form>
+            </div>
         </div>
     </div>
     
