--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     </div>
                     <div class="input-group">
                         <label for="phoneNumber">Phone Number</label>
-                        <input type="text" id="phoneNumber" name="phoneNumber" required>
+                        <input type="tel" id="phoneNumber" name="phoneNumber" required>
                     </div>
                     <div class="input-group">
                         <label for="password">Password</label>
@@ -50,12 +50,13 @@
                         <label for="confirm-password">Confirm Password</label>
                         <input type="password" id="confirm-password" name="confirm-password" required>
                     </div>
+                </form>
                     <div class="submit">
                         <button type="submit">Create Account</button>
                     </div>
                     <div class="login-link">
                         <p>Already have an account? <a href="#">Log In</a></p>
-                </form>
+                    </div>
             </div>
         </div>
     </div>
